# lem_in

./: .gitignore  1.txt  CMakeLists.txt  Makefile  counter.c  lem-in
inc/: lem_in.h
libft/: Makefile
libft/inc/: get_next_line.h  libft.h
libft/src/: ft_absolute_val.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnbr_float.c  ft_putstr.c  ft_putstr_fd.c  ft_strbyte.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  (+26 more)
src/: add_room.c  ants_preparation.c  bfs.c  check_arguments.c  connect_rooms.c  create_ants.c  create_packages.c  free.c  free2.c  get_best_package.c  get_file.c  help_functions.c  inits.c  is_enough_data.c  is_it_error.c  lem_in.c  move_ants.c  package_preparation.c  print.c  print2.c  print3.c  reader.c  reader_ants.c  reader_links.c  reader_room.c  room_validate.c  set_ants_on_ways.c  set_error.c  set_packages_capacity.c  work_with_packages.c  work_with_room_functions.c  work_with_way_functions.c
testing_files/: invalid10  invalid11  invalid13  invalid14  invalid15  invalid16  invalid2  invalid3  invalid6  invalid9  valid1  valid12  valid13  valid14  valid15  valid16  valid17  valid5  valid6  valid7  valid8
tests/: 1nostart  2noend  3extrastart  4extraend
