cmake_minimum_required(VERSION 3.12)
project(lem-in)

set(CMAKE_CXX_STANDARD 14)

include_directories(inc)
include_directories(libft/inc)

add_executable(lem-in
        inc/lem_in.h
        libft/inc/get_next_line.h
        libft/inc/libft.h
        libft/src/ft_absolute_val.c
        libft/src/ft_atoi.c
        libft/src/ft_bzero.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isdigit.c
        libft/src/ft_isprint.c
        libft/src/ft_itoa.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstlast.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_strbyte.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strmerge.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strrev.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_swap.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/get_next_line.c
        libft/Makefile
        src/add_room.c
        src/free.c
        src/lem_in.c
        src/reader.c
        src/reader_ants.c
        src/reader_links.c
        src/reader_room.c
        src/set_error.c
        testing_files/error_input_cases
        testing_files/invalid1
        testing_files/invalid10
        testing_files/invalid11
        testing_files/invalid12
        testing_files/invalid13
        testing_files/invalid14
        testing_files/invalid15
        testing_files/invalid16
        testing_files/invalid17
        testing_files/invalid18
        testing_files/invalid19
        testing_files/invalid2
        testing_files/invalid3
        testing_files/invalid4
        testing_files/invalid5
        testing_files/invalid6
        testing_files/invalid7
        testing_files/invalid8
        testing_files/invalid9
        testing_files/valid1
        testing_files/valid10
        testing_files/valid11
        testing_files/valid12
        testing_files/valid2
        testing_files/valid3
        testing_files/valid4
        testing_files/valid5
        testing_files/valid6
        testing_files/valid7
        testing_files/valid8
        testing_files/valid9
        author
        Makefile libft/src/gnl.c src/bfs.c src/connect_rooms.c src/check_arguments.c src/create_packages.c src/print.c src/get_best_package.c libft/src/ft_putnbr_float.c src/set_ants_on_ways.c src/set_packages_capacity.c src/move_ants.c src/create_ants.c src/package_preparation.c src/ants_preparation.c)
